--- a/test/fixtures/ads.yml
+++ b/test/fixtures/ads.yml
@@ -4,8 +4,16 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+#one: {}
 # column: value
 #
-two: {}
+#two: {}
 # column: value
+
+one:
+  title: "Test Ad"
+  magazine_id: 1
+
+two:
+  title: "Test Ad"
+  magazine_id: 2
